--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test"
   },
   "author": "Alex Plate",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "nan": "^2.14.1"
   },
